--- a/app/src/main/res/layout/list_device_item.xml
+++ b/app/src/main/res/layout/list_device_item.xml
@@ -35,7 +35,7 @@ SOFTWARE.
             android:id="@+id/device_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin" />
+            android:layout_margin="16dp" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -47,15 +47,15 @@ SOFTWARE.
                 android:id="@+id/device_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/text_margin"
-                android:layout_marginTop="@dimen/text_margin"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:textAppearance="?attr/textAppearanceListItem" />
 
             <TextView
                 android:id="@+id/device_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/text_margin_nested"
+                android:layout_marginStart="26dp"
                 android:alpha="0.3"
                 android:textSize="12sp" />
 
