--- a/app/src/main/res/layout/activity_weight_input.xml
+++ b/app/src/main/res/layout/activity_weight_input.xml
@@ -4,6 +4,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E0E0E0"
     tools:context=".WeightInput">
+
+    <TextView
+        android:id="@+id/judul"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="45dp"
+        android:text="Timbang Berat"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:fontFamily="@font/nunito_sans_black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/subjudul"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:text="Silahkan timbang berat dan \ntunggu sampai hasil keluar"
+        android:textSize="18sp"
+        app:fontFamily="@font/nunito_sans"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/judul" />
+
+    <ImageView
+        android:id="@+id/circleback"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@drawable/circlebackground"
+        android:layout_marginTop="120dp"
+        app:layout_constraintTop_toBottomOf="@id/subjudul"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/baseline_scale_24"
+        app:layout_constraintTop_toTopOf="@id/circleback"
+        app:layout_constraintStart_toStartOf="@id/circleback"
+        app:layout_constraintEnd_toEndOf="@id/circleback"
+        app:layout_constraintBottom_toBottomOf="@id/circleback"/>
+
+    <ImageView
+        android:id="@+id/beratback"
+        android:layout_width="130dp"
+        android:layout_height="70dp"
+        android:background="@drawable/rounded_rectangle"
+        android:layout_marginTop="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/circleback"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/kambingkg"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toStartOf="@id/beratback"
+        app:layout_constraintTop_toTopOf="@id/beratback"
+        app:layout_constraintEnd_toEndOf="@id/beratback"
+        app:layout_constraintBottom_toBottomOf="@id/beratback"
+        android:gravity="center"
+        app:fontFamily="@font/nunito_sans_black"
+        android:textSize="28sp"
+        android:text="0kg"/>
+
+    <Button
+        android:id="@+id/buttondone"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:text="selesai"
+        app:layout_constraintTop_toBottomOf="@id/beratback"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/buttonretry"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:text="Coba Lagi"
+        app:layout_constraintTop_toBottomOf="@id/beratback"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
