--- a/app/src/main/res/drawable/circlebackground.xml
+++ b/app/src/main/res/drawable/circlebackground.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#ffffff"/>
+        android:color="#d1d1d1"/>
 </shape>
